...

          Spacer(modifier = Modifier.height(16.dp))

          // Welcome Text
          Text(
              modifier =
                  Modifier.testTag("loginTitle").fillMaxWidth(), // j'ai add fillMaxWidth(0.8f)
              text = "SuddenBump!",
              style =
                  MaterialTheme.typography.headlineLarge.copy(
                      fontSize = 48.sp, // j'ai changé, c'était 36.sp de base
                      lineHeight = 64.sp),
              color = violetColor,
...
              8.dp), // (avant y avait juste 50, sans le dp) // Circular edges for the button
      border = BorderStroke(1.dp, Color.White),
      modifier =
          Modifier.padding(16.dp)
              .height(48.dp) // Adjust height as needed //c'était 48 avant
              .width(300.dp) // j'ai add cette ligne
              .testTag("loginButton")) {
        Row(
            verticalAlignment = Alignment.CenterVertically,
            horizontalArrangement = Arrangement.Center,
            modifier = Modifier.fillMaxWidth()) {
              // Load the Google logo from resources
              Image(
...
