...
              OutlinedTextField(
                  value = email,
                  onValueChange = {},
                  label = { Text("Email") },
                  enabled = false,
                  colors = textFieldColors,
                  modifier = Modifier.fillMaxWidth().testTag("emailField").padding(16.dp))

              // Phone number input field
              OutlinedTextField(
                  value = phoneNumber,
                  onValueChange = { phoneNumber = it },
                  label = { Text("Phone Number") },
...
